Ganzen Namen bei Gesamtwertung anzeigen

--- a/app/views/competitions/score/competition_results/_index_table.html.haml
+++ b/app/views/competitions/score/competition_results/_index_table.html.haml
@@ -10,7 +10,7 @@
   - competition_result.rows.each do |row|
     %tr
       %td.sum-points #{competition_result.place_for_row(row)}.
-      %td= row.team.shortcut_name
+      %td= row.team.full_name
       - competition_result.results.each do |result|
         - assessment_result = row.assessment_result_from(result)
         %td.small.time= assessment_result&.result_entry&.human_time
