--- a/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index/view.html
+++ b/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index/view.html
@@ -150,14 +150,14 @@ LA
 </tr>
 <tr>
 <td class='sum-points'>1.</td>
-<td>Frauen-T 1</td>
+<td>Frauen-Team 1</td>
 <td class='small time'>12,00</td>
 <td class='small points'>1</td>
 <td class='sum-points'>1</td>
 </tr>
 <tr>
 <td class='sum-points'>2.</td>
-<td>Frauen-T 2</td>
+<td>Frauen-Team 2</td>
 <td class='small time'>13,00</td>
 <td class='small points'>2</td>
 <td class='sum-points'>2</td>
