--- a/app/views/competitions/score/results/index.html.haml
+++ b/app/views/competitions/score/results/index.html.haml
@@ -1,6 +1,6 @@
 = render 'competitions/header', competition: @competition, sub: resource_class.model_name.human(count: :many)
 
-- cache_if(current_user.nil?, @competition) do
+- cache_if(current_user.nil? && simple_access.nil?, @competition) do
   .row.g-4
     .col-lg-8
       = card(resource_class.model_name.human(count: :many)) do |c|
