--- a/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-index-two-entries/view.html
+++ b/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-index-two-entries/view.html
@@ -110,7 +110,7 @@ Erweitert
 </div>
 <div class='pb-4 mt-4 container'>
 <div class='row g-4'>
-<div class='col-lg-8'>
+<div class='col-lg-7'>
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
@@ -131,6 +131,22 @@ Erweitert
 </tr>
 </table>
 
+</div>
+</div>
+<div class='col-lg-5'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Gastzugänge</h4>
+<a class="card-primary-action" href="/2024/mv-cup/simple_accesses/new">Hinzufügen
+<i class='far fa-square-plus'></i>
+</a>
+</div>
+</div>
+<div class='card-body'>
+<div class='alert alert-info'>Keine Einträge gefunden</div>
+
+</div>
 </div>
 </div>
 <div class='col-lg-8'>
