--- a/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-new/view.html
+++ b/spec/fixtures/views/Competitions_AccessesController_accesses_managements_uses_CRUD-new/view.html
@@ -113,7 +113,7 @@ Erweitert
 <form class="simple_form new_user_access_request" id="new_user_access_request" novalidate="novalidate" action="/2024/mv-cup/access_requests" accept-charset="UTF-8" method="post"><div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Neuen Wettkampf anlegen</h4>
+<h4 class='m-0 py-2 ps-3'>Neuen Zugang anlegen</h4>
 </div>
 </div>
 <div class='card-body'>
@@ -133,7 +133,7 @@ Alfred Meier</textarea><small class="form-text text-muted">Dieser Text wird an d
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
 <div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Zugangsanfrage erstellen</button>
-<a class="btn btn-secondary" href="/">Abbrechen</a>
+<a class="btn btn-secondary" href="/2024/mv-cup/accesses">Abbrechen</a>
 </div>
 </div>
 </div>
