--- a/spec/fixtures/views/Competitions_SimpleAccessesController_accesses_managements_uses_CRUD-index-one-entries/view.html
+++ b/spec/fixtures/views/Competitions_SimpleAccessesController_accesses_managements_uses_CRUD-index-one-entries/view.html
@@ -55,7 +55,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Zugangsanfrage hinzufügen</p>
+<p class='lead m-0 ms-1'>Zugänge</p>
 
 </div>
 </header>
@@ -91,8 +91,8 @@ Erweitert
 <a class="dropdown-item" href="/2024/mv-cup/certificates/templates">Urkundenvorlagen
 </a>
 </div>
-<div class=''>
-<a class="dropdown-item" href="/2024/mv-cup/accesses">Zugänge
+<div class='active'>
+<a class="dropdown-item active" aria-current="page" href="/2024/mv-cup/accesses">Zugänge
 </a>
 </div>
 
@@ -105,43 +105,58 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
-<div class='alert alert-danger'>Bitte überprüfen Sie folgende Fehler:</div>
+<div class='alert alert-info'>Die Änderungen wurden gespeichert.</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
 <div class='row g-4'>
-<div class='col-lg-8'>
-<form class="simple_form new_user_access_request" id="new_user_access_request" novalidate="novalidate" action="/2024/mv-cup/access_requests" accept-charset="UTF-8" method="post"><div class='card'>
+<div class='col-lg-7'>
+<div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Neuen Zugang anlegen</h4>
+<h4 class='m-0 py-2 ps-3'>Zugänge</h4>
+<a class="card-primary-action" href="/2024/mv-cup/access_requests/new">Hinzufügen
+<i class='far fa-square-plus'></i>
+</a>
 </div>
 </div>
-<div class='card-body'>
-<div class="form-group email required user_access_request_email form-group-invalid"><label class="control-label email required" for="user_access_request_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control is-invalid string email required" autofocus="autofocus" aria-invalid="true" type="email" value="foo" name="user_access_request[email]" id="user_access_request_email" /><div class="invalid-feedback">E-Mail-Adresse ist nicht gültig</div><small class="form-text text-muted">E-Mail-Adresse des zukünftigen Admins</small></div>
-<div class="form-group text required user_access_request_text form-group-valid"><label class="control-label text required" for="user_access_request_text">E-Mail-Text <abbr title="required">*</abbr></label><textarea class="form-control text required" rows="10" name="user_access_request[text]" id="user_access_request_text">
-Hallo,
+<table class='table'>
+<tr>
+<th>Name</th>
+<th>E-Mail-Adresse</th>
+</tr>
+<tr>
+<td>Alfred Meier</td>
+<td>alfred@meier.de</td>
+</tr>
+</table>
 
-ich habe bei feusport.de einen neuen Wettkampf für dich angelegt. Wenn du auf den nachfolgenden Link klickst, kannst du die Kontrolle über den Wettkampf übernehmen.
-Viele Grüße
+</div>
+</div>
+<div class='col-lg-5'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Gastzugänge</h4>
+<a class="card-primary-action" href="/2024/mv-cup/simple_accesses/new">Hinzufügen
+<i class='far fa-square-plus'></i>
+</a>
+</div>
+</div>
+<table class='table'>
+<tr>
+<th>Name</th>
+<th></th>
+</tr>
+<tr>
+<td>foo</td>
+<td class='text-end'>
+<a class="btn btn-light btn-sm" data-turbo-confirm="Zugang wirklich entfernen?" data-turbo-method="delete" href="/2024/mv-cup/simple_accesses/UUID"><i class='far fa-trash'></i>
+</a></td>
+</tr>
+</table>
 
-Alfred Meier</textarea><small class="form-text text-muted">Dieser Text wird an den zukünftigen Admin gesendet</small></div>
-<fieldset class='group'>
-<fieldset class="form-group boolean optional user_access_request_drop_myself"><div class="form-check"><input name="user_access_request[drop_myself]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="user_access_request[drop_myself]" id="user_access_request_drop_myself" /><label class="form-check-label boolean optional" for="user_access_request_drop_myself">Eigenen Zugang löschen</label><small class="form-text text-muted">Wenn du hier einen Haken setzt, wird dein Zugang zu diesem Wettkampf automatisch gelöscht, sobald die Anfrage bestätigt wurde.</small></div></fieldset>
-</fieldset>
-
 </div>
-<div class='card-footer'>
-<div class='d-flex justify-content-between align-items-start'>
-<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Zugangsanfrage erstellen</button>
-<a class="btn btn-secondary" href="/2024/mv-cup/accesses">Abbrechen</a>
-</div>
-</div>
-</div>
-</div>
-</form></div>
-<div class='col-lg-4'>
-
 </div>
 </div>
 </div>
