--- a/spec/fixtures/views/Competitions_SimpleAccessesController_accesses_managements_uses_CRUD-new-error/view.html
+++ b/spec/fixtures/views/Competitions_SimpleAccessesController_accesses_managements_uses_CRUD-new-error/view.html
@@ -55,7 +55,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Zugangsanfrage hinzufügen</p>
+<p class='lead m-0 ms-1'>Gastzugang hinzufügen</p>
 
 </div>
 </header>
@@ -111,29 +111,22 @@ Erweitert
 <div class='pb-4 mt-4 container'>
 <div class='row g-4'>
 <div class='col-lg-8'>
-<form class="simple_form new_user_access_request" id="new_user_access_request" novalidate="novalidate" action="/2024/mv-cup/access_requests" accept-charset="UTF-8" method="post"><div class='card'>
+<form class="simple_form new_simple_access" id="new_simple_access" novalidate="novalidate" action="/2024/mv-cup/simple_accesses" accept-charset="UTF-8" method="post"><div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>Neuen Zugang anlegen</h4>
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group email required user_access_request_email form-group-invalid"><label class="control-label email required" for="user_access_request_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control is-invalid string email required" autofocus="autofocus" aria-invalid="true" type="email" value="foo" name="user_access_request[email]" id="user_access_request_email" /><div class="invalid-feedback">E-Mail-Adresse ist nicht gültig</div><small class="form-text text-muted">E-Mail-Adresse des zukünftigen Admins</small></div>
-<div class="form-group text required user_access_request_text form-group-valid"><label class="control-label text required" for="user_access_request_text">E-Mail-Text <abbr title="required">*</abbr></label><textarea class="form-control text required" rows="10" name="user_access_request[text]" id="user_access_request_text">
-Hallo,
-
-ich habe bei feusport.de einen neuen Wettkampf für dich angelegt. Wenn du auf den nachfolgenden Link klickst, kannst du die Kontrolle über den Wettkampf übernehmen.
-Viele Grüße
-
-Alfred Meier</textarea><small class="form-text text-muted">Dieser Text wird an den zukünftigen Admin gesendet</small></div>
-<fieldset class='group'>
-<fieldset class="form-group boolean optional user_access_request_drop_myself"><div class="form-check"><input name="user_access_request[drop_myself]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="user_access_request[drop_myself]" id="user_access_request_drop_myself" /><label class="form-check-label boolean optional" for="user_access_request_drop_myself">Eigenen Zugang löschen</label><small class="form-text text-muted">Wenn du hier einen Haken setzt, wird dein Zugang zu diesem Wettkampf automatisch gelöscht, sobald die Anfrage bestätigt wurde.</small></div></fieldset>
-</fieldset>
+<div class="form-group select required simple_access_name form-group-valid"><label class="control-label select required" for="simple_access_name">Name <abbr title="required">*</abbr></label><select class="form-select select required" autofocus="autofocus" name="simple_access[name]" id="simple_access_name"><option value="Admin">Admin</option>
+<option value="Wettkampfrichter">Wettkampfrichter</option></select></div>
+<div class="form-group password optional simple_access_password form-group-valid"><label class="control-label password optional" for="simple_access_password">Passwort</label><input class="form-control password optional" type="password" name="simple_access[password]" id="simple_access_password" /></div>
+<div class="form-group password optional simple_access_password_confirmation form-group-invalid"><label class="control-label password optional" for="simple_access_password_confirmation">Passwortbestätigung</label><input class="form-control is-invalid password optional" aria-invalid="true" type="password" name="simple_access[password_confirmation]" id="simple_access_password_confirmation" /><div class="invalid-feedback">Passwortbestätigung stimmt nicht mit Passwort überein</div></div>
 
 </div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Zugangsanfrage erstellen</button>
+<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Gastzugang erstellen</button>
 <a class="btn btn-secondary" href="/2024/mv-cup/accesses">Abbrechen</a>
 </div>
 </div>
@@ -141,7 +134,18 @@ Alfred Meier</textarea><small class="form-text text-muted">Dieser Text wird an d
 </div>
 </form></div>
 <div class='col-lg-4'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Gastzugänge</h4>
+</div>
+</div>
+<div class='card-body'>
+<p>Ein Gastzugang ist für die Admins und Wettkampfrichter am Veranstaltungstag gedacht, die keinen Eigenen Zugang über feusport.de haben. Du kannst dafür ein einfaches Passwort wählen und es auf allen Tablets schnell eingeben.</p>
+<p>Der Link zum Login findet du auf der Startseite des Wettkampfes unter <b>Gastzugang</b>.</p>
 
+</div>
+</div>
 </div>
 </div>
 </div>
