--- a/app/views/competitions/series/assessments/show.html.haml
+++ b/app/views/competitions/series/assessments/show.html.haml
@@ -9,19 +9,19 @@
       %th Platz
       %th Name
       %th Vorname
-      - @assessment.round.cups.each do |cup|
+      - @assessment.round.showable_cups(@competition).each do |cup|
         %th= cup.competition_place
       %th Bestzeit
       %th Summe
       %th Teil.
       %th Punkte
     %tbody
-      - @assessment.rows.each do |row|
+      - @assessment.rows(@competition).each do |row|
         %tr
           %td= row.rank
           %td= row.entity.last_name
           %td= row.entity.first_name
-          - @assessment.round.cups.each do |cup|
+          - @assessment.round.showable_cups(@competition).each do |cup|
             %td= row.participation_for_cup(cup)&.result_entry_with_points
           %td= row.best_result_entry
           %td= row.sum_result_entry
