--- a/spec/fixtures/views/People_People_managements_uses_CRUD-index-with-one/view.html
+++ b/spec/fixtures/views/People_People_managements_uses_CRUD-index-with-one/view.html
@@ -150,9 +150,7 @@ Erweitert
 first-name last-name
 
 </td>
-<td>
-new team
-</td>
+<td>new team</td>
 <td></td>
 <td class='text-end'>
 <a class="btn-xs btn btn-light btn-sm" title="Wertungen bearbeiten" data-remote="true" href="/2024/mv-cup/people/UUID/edit_assessment_requests"><i class="far fa-edit"></i></a>
