--- a/app/views/competitions/series/rounds/show.html.haml
+++ b/app/views/competitions/series/rounds/show.html.haml
@@ -21,27 +21,31 @@
                 %td= link_to('Ansehen', competition_series_assessment_path(id: row.id), class: 'btn btn-sm btn-light')
 
 - if @team_assessments_exists
-  - %i[female male].each do |gender|
+  - Genderable::KEYS.each do |gender|
     - next if @round.team_assessment_rows(@competition, gender).blank?
 
-    = card_direct("Mannschaftswertung #{t("gender.#{gender}")}", class: 'mb-4') do
-      .scroll-x
-        %table.table.table-hover.table-bordered.table-sm
-          %thead
-            %th.hide-xs Platz
-            %th Team
-            - @round.showable_cups(@competition).each do |cup|
-              %th.small= cup.competition_place
-            %th.hide-xs Teil.
-            %th.hide-xs Bestzeit
-            %th Punkte
-          %tbody
-            - @round.team_assessment_rows(@competition, gender).each do |row|
-              %tr
-                %td.hide-xs= row.rank
-                %td= row.name_with_number
-                - @round.showable_cups(@competition).each do |cup|
-                  %td.small= render('competitions/series/rounds/participations_table', participations: row.participations_for_cup(cup))
-                %td.hide-xs= row.count
-                %td.hide-xs= row.best_result_entry
-                %td= row.points
+    = card("Mannschaftswertung #{t("gender.#{gender}")}", class: 'mb-4') do |c|
+      - c.direct do
+        .scroll-x
+          %table.table.table-hover.table-bordered.table-sm
+            %thead
+              %th.hide-xs Platz
+              %th Team
+              - @round.showable_cups(@competition).each do |cup|
+                %th.small= cup.competition_place
+              %th.hide-xs Teil.
+              %th.hide-xs Bestzeit
+              %th Punkte
+            %tbody
+              - @round.team_assessment_rows(@competition, gender).each do |row|
+                %tr
+                  %td.hide-xs= row.rank
+                  %td= row.full_name
+                  - @round.showable_cups(@competition).each do |cup|
+                    %td.small= render('competitions/series/rounds/participations_table', participations: row.participations_for_cup(cup))
+                  %td.hide-xs= row.count
+                  %td.hide-xs= row.best_result_entry
+                  %td= row.points
+        - if can?(:manage, @competition) && @competition.certificates_templates.exists?
+          - c.actions do |actions|
+            - actions.link_to 'Urkunden', new_competition_certificates_list_path(series_team_round_id: "#{@round.id}-#{gender}"), end_icon: :file_certificate
