--- a/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-round/view.html
+++ b/spec/fixtures/views/competitions_series_rounds_display_round_calculation_displays-show-round/view.html
@@ -201,7 +201,7 @@ Hakenleitersteigen - Männlich
 <tbody>
 <tr>
 <td class='hide-xs'>1</td>
-<td>Frauen-Team 1</td>
+<td>Frauen-Team</td>
 <td class='small'><table class='team_assessments'>
 <tr>
 <th class='hide-xs'>LA</th>
@@ -215,7 +215,7 @@ Hakenleitersteigen - Männlich
 </tr>
 <tr>
 <td class='hide-xs'>2</td>
-<td>Frauen-Team 2</td>
+<td>Frauen-Team</td>
 <td class='small'><table class='team_assessments'>
 <tr>
 <th class='hide-xs'>LA</th>
