--- a/app/views/competitions/score/results/show.html.haml
+++ b/app/views/competitions/score/results/show.html.haml
@@ -17,7 +17,7 @@
               - if @result.band.team_tags.present? || @result.band.person_tags.present?
                 = btn_link_to 'Kennzeichungen', action: :edit, form: 'tags'
               = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Ergebnisliste wirklich löschen? Die zugehörigen Startlisten werden verändert!' }
-          - if can?(:edit, @result) && Certificates::Template.exists?
+          - if can?(:edit, @result) && @competition.certificates_templates.exists?
             = btn_link_to 'Urkunden', new_competition_certificates_list_path(score_result_id: @result.id)
 
     - if @rows.count > 0
