--- a/app/views/competitions/certificates/lists/new.html.haml
+++ b/app/views/competitions/certificates/lists/new.html.haml
@@ -17,7 +17,7 @@
             .row
               .col-md-5= f.input :competition_result_id, collection: @competition.score_competition_results.sort
 
-          - if @competition.score_results.select(&:single_group_result?).present?
+          - if @competition.score_results.any?(&:single_group_result?)
             .row
               .col-md-2
               .col-md-3 oder
