--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-edit-times-db-changed/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-edit-times-db-changed/view.html
@@ -150,7 +150,7 @@ Erweitert
 <tbody>
 <tr class='' data-id='UUID'>
 <td class='run'>
-<a name='jump-run-2'></a>
+<a id='jump-run-2'></a>
 1
 </td>
 <th class='track'>1</th>
@@ -221,7 +221,7 @@ In der Datenbank steht zur Zeit folgender Wert:
 </tr>
 <tr class='' data-id='UUID'>
 <td class='run'>
-<a name='jump-run-3'></a>
+<a id='jump-run-3'></a>
 2
 </td>
 <th class='track'>1</th>
