--- a/spec/fixtures/views/Score_List_move_list_moves_entries-move-new-order/view.html
+++ b/spec/fixtures/views/Score_List_move_list_moves_entries-move-new-order/view.html
@@ -150,7 +150,7 @@ Erweitert
 <tbody>
 <tr class=''>
 <td class='run'>
-<a name='jump-run-2'></a>
+<a id='jump-run-2'></a>
 1
 </td>
 <th class='track'>1</th>
@@ -192,7 +192,7 @@ Erweitert
 
 <tr class='' data-id='UUID'>
 <td class='run'>
-<a name='jump-run-3'></a>
+<a id='jump-run-3'></a>
 2
 </td>
 <th class='track'>1</th>
@@ -234,7 +234,7 @@ Erweitert
 
 <tr class=''>
 <td class='run'>
-<a name='jump-run-4'></a>
+<a id='jump-run-4'></a>
 3
 </td>
 <th class='track'>1</th>
