--- a/spec/fixtures/views/competitions_score_runs_edit_run_shows_form_and_updates-edit-with-error/view.html
+++ b/spec/fixtures/views/competitions_score_runs_edit_run_shows_form_and_updates-edit-with-error/view.html
@@ -149,7 +149,7 @@ Erweitert
 
 <tr class='' data-id='UUID'>
 <td class='run'>
-<a name='jump-run-2'></a>
+<a id='jump-run-2'></a>
 1
 </td>
 <th class='track'>1</th>
