--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-edit-times-person/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-edit-times-person/view.html
@@ -149,7 +149,7 @@ Erweitert
 <tbody>
 <tr class='' data-id='UUID'>
 <td class='run'>
-<a name='jump-run-2'></a>
+<a id='jump-run-2'></a>
 1
 </td>
 <th class='track'>1</th>
@@ -209,7 +209,7 @@ Erweitert
 </tr>
 <tr class='' data-id='UUID'>
 <td class='run'>
-<a name='jump-run-3'></a>
+<a id='jump-run-3'></a>
 2
 </td>
 <th class='track'>1</th>
