--- a/spec/fixtures/views/Score_List_add_to_list_when_discipline_is_like_fire_relay_shows_and_add_entries-select/view.html
+++ b/spec/fixtures/views/Score_List_add_to_list_when_discipline_is_like_fire_relay_shows_and_add_entries-select/view.html
@@ -140,7 +140,7 @@ Erweitert
 <div class="form-group hidden score_list_entries_track form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="2" name="score_list[entries_attributes][0][track]" id="score_list_entries_attributes_0_track" /></div>
 <div class="form-group hidden score_list_entries_entity_type form-group-valid"><input class="form-control hidden" autocomplete="off" type="hidden" value="TeamRelay" name="score_list[entries_attributes][0][entity_type]" id="score_list_entries_attributes_0_entity_type" /></div>
 <div class="form-group select required score_list_entries_assessment"><label class="control-label select required" for="score_list_entries_attributes_0_assessment_id">Wertung/Gruppe <abbr title="required">*</abbr></label><select class="form-select select required" name="score_list[entries_attributes][0][assessment_id]" id="score_list_entries_attributes_0_assessment_id"><option value="" label=" "></option>
-<option value="UUID">4x100m-Feuerwehrstafette - Männer</option></select></div>
+<option value="UUID">4x100m-Hindernisstaffel - Männer</option></select></div>
 <div class="form-group select required score_list_entries_assessment_type form-group-valid"><label class="control-label select required" for="score_list_entries_attributes_0_assessment_type">Wertung <abbr title="required">*</abbr></label><select class="form-select select required" name="score_list[entries_attributes][0][assessment_type]" id="score_list_entries_attributes_0_assessment_type"><option value="" label=" "></option>
 <option selected="selected" value="group_competitor">Mannschaftswertung</option>
 <option value="single_competitor">Einzelstarter</option>
