--- a/spec/fixtures/views/Competitions_AccessesController_when_user_has_friends_is_hinted_on_new_access_requests_page-new-with-friends/view.html
+++ b/spec/fixtures/views/Competitions_AccessesController_when_user_has_friends_is_hinted_on_new_access_requests_page-new-with-friends/view.html
@@ -140,6 +140,22 @@ Alfred Meier
 </div>
 </div>
 </form></div>
+<div class='col-lg-4'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Bekannte Kontakte</h4>
+</div>
+</div>
+<table class='table'>
+<tr>
+<td>Other Meier</td>
+<td class='text-end'><a class="btn btn-light btn-sm" href="/2024/mv-cup/access_requests/new?friend_id=UUID">Auswählen</a></td>
+</tr>
+</table>
+
+</div>
+</div>
 </div>
 </div>
 </body>
