--- a/spec/fixtures/views/Competitions_AccessesController_when_user_has_friends_is_hinted_on_new_access_requests_page-new-with-selected-friend/view.html
+++ b/spec/fixtures/views/Competitions_AccessesController_when_user_has_friends_is_hinted_on_new_access_requests_page-new-with-selected-friend/view.html
@@ -117,9 +117,9 @@ Erweitert
 </div>
 </div>
 <div class='card-body'>
-<div class="form-group email required user_access_request_email"><label class="control-label email required" for="user_access_request_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control string email required" autofocus="autofocus" type="email" name="user_access_request[email]" id="user_access_request_email" /><small class="form-text text-muted">E-Mail-Adresse des zukünftigen Admins</small></div>
+<div class="form-group email required user_access_request_email form-group-valid"><label class="control-label email required" for="user_access_request_email">E-Mail-Adresse <abbr title="required">*</abbr></label><input class="form-control string email required" autofocus="autofocus" type="email" value="other@meier.de" name="user_access_request[email]" id="user_access_request_email" /><small class="form-text text-muted">E-Mail-Adresse des zukünftigen Admins</small></div>
 <div class="form-group text required user_access_request_text form-group-valid"><label class="control-label text required" for="user_access_request_text">E-Mail-Text <abbr title="required">*</abbr></label><textarea class="form-control text required" rows="10" name="user_access_request[text]" id="user_access_request_text">
-Hallo,
+Hallo Other Meier,
 
 ich habe bei feusport.de einen neuen Wettkampf für dich angelegt. Wenn du auf den nachfolgenden Link klickst, kannst du die Kontrolle über den Wettkampf übernehmen.
 Viele Grüße
@@ -140,6 +140,22 @@ Alfred Meier
 </div>
 </div>
 </form></div>
+<div class='col-lg-4'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Bekannte Kontakte</h4>
+</div>
+</div>
+<table class='table'>
+<tr>
+<td>Other Meier</td>
+<td class='text-end'><a class="btn btn-light btn-sm" href="/2024/mv-cup/access_requests/new?friend_id=UUID">Auswählen</a></td>
+</tr>
+</table>
+
+</div>
+</div>
 </div>
 </div>
 </body>
