--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-index-with-one/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-index-with-one/view.html
@@ -122,6 +122,14 @@ Erweitert
 <div class='pb-4 mt-4 container'>
 <div class='row'>
 <div class='col-lg-12'>
+<div class='alert alert-warning'>
+<p>Zu einigen Mannschaften konnte keine Verknüpfung mit einer vorhandenen Mannschaft gefunden werden.</p>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/without_statistics_connection">Mannschaften ansehen</a>
+</div>
+</div>
+</div>
+<div class='row'>
+<div class='col-lg-12'>
 <div class='card mb-3'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
