--- a/app/views/competitions/teams/without_statistics_connection.html.haml
+++ b/app/views/competitions/teams/without_statistics_connection.html.haml
@@ -1,50 +1,50 @@
 = render 'competitions/header', competition: @competition, sub: 'Mannschaften ohne Verknüpfung'
 
-= card('Mannschaften ohne Verknüpfung', class: 'mb-3') do |c|
+= card('Mannschaften ohne Verknüpfung', class: 'mb-3 text-bg-accent2') do |c|
   - c.body do
-    %p Bei folgenden Einträgen konnten keine alten Serien-Ergebnisse zugeordnet werden. Dies kann zwei Ursachen haben:
+    %p Bei folgenden Mannschaften konnte keine Verknüpfung mit einer vorhandenen Mannschaft bei Feuerwehrsport-Statistik gefunden werden.
+    %p Dies kann verschiedene Ursachen haben:
     %ul
       %li Name wurde falsch geschrieben
-      %li Erste Teilnahme bei Serie
+      %li Der Name wurde beim Anlegen nicht angeklickt
+      %li Erste Teilnahme bei einem Wettkampf
 
+= card_direct do
+  %table.table.table-bordered
+    %thead
+      %tr
+        %th Wettkampf-Name
+        %th Verknüpfung-Name
+        %th Aktionen
+      %tr
+        %td.small
+          %em So heißt die Mannschaft bei diesem Wettkampf
+        %td.small
+          %em Vorschläge von der Feuerwehrsport-Statistik
+        %td
+    %tbody
+      - @competition.bands.sort.each do |band|
+        - next unless @team_suggestions.any? { |sug| sug.team.band == band }
 
-    %table.table.table-bordered.table-hover
-      %thead
         %tr
-          %th Wettkampf-Name
-          %th Verknüpfung-Name
-          %th Aktionen
-      %tbody
-        - @competition.bands.sort.each do |band|
-          - next unless @team_suggestions.any? { |sug| sug.team.band == band }
-
-          %tr
-            %th{ colspan: 3 }= band.name
-          - @team_suggestions.select { |sug| sug.team.band == band }.each do |suggestion|
-            - if suggestion.count > 0
-              - suggestion.suggestions.each_with_index do |fss, i|
-                - if i == 0
-                  %tr
-                    %td{ rowspan: suggestion.count }
-                      = suggestion.team.name
-                    %td
-                      = fss.name
-                    %td
-                      = simple_form_for(suggestion.team, url: url_for(id: suggestion.team.id, controller: controller_path, action: :update, return_to: 'without_statistics_connection')) do |f|
-                        = f.hidden_field :fire_sport_statistics_team_id, value: fss.id
-                        = f.primary_button :submit, 'Übernehmen', class: 'btn-sm'
-
-                - else
-                  %tr
-                    %td
-                      = fss.name
-                    %td
-                      = simple_form_for(suggestion.team, url: url_for(id: suggestion.team.id, controller: controller_path, action: :update, return_to: 'without_statistics_connection')) do |f|
-                        = f.hidden_field :fire_sport_statistics_team_id, value: fss.id
-                        = f.primary_button :submit, 'Übernehmen', class: 'btn-sm'
-            - else
+          %th.px-5{ colspan: 3 }= band.name
+        - @team_suggestions.select { |sug| sug.team.band == band }.each do |suggestion|
+          - if suggestion.count > 0
+            - suggestion.suggestions.each_with_index do |fss, i|
               %tr
-                %td.bg-warning
-                  = suggestion.name
-                %td.bg-warning
-                %td.bg-warning
+                - if i == 0
+                  %td{ rowspan: suggestion.count }
+                    = link_to(suggestion.team.name, competition_team_path(id: suggestion.team.id))
+                %td.px-2
+                  = fss.name
+                %td
+                  = simple_form_for(suggestion.team, url: url_for(id: suggestion.team.id, controller: controller_path, action: :update, return_to: 'without_statistics_connection')) do |f|
+                    = f.hidden_field :fire_sport_statistics_team_id, value: fss.id
+                    = f.primary_button :submit, 'Verknüpfen', class: 'btn-sm'
+
+          - else
+            %tr
+              %td.bg-warning
+                = suggestion.team.name
+              %td.bg-warning
+              %td.bg-warning
