Aktuelle Wettkämpfe hervorheben

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -192,22 +192,11 @@
       height: 2.1rem
       width: 2.1rem
 
-.list-competitions
+.current-competition
+  background-color: #ebbbbb4f
+.current-competition *
+  font-weight: bold
 
-  .list-group-item
-    width: 90%
-    margin-bottom: 1rem
-    border-radius: 0.2rem
-    background: $light
-    cursor: pointer
-    transition: all 0.3s ease-in-out
-
-    &:hover
-      transform: scaleX(1.1)
-
-  .about span
-    font-size: 12px
-    margin-right: 10px
 
 
 
