--- a/spec/fixtures/views/Home_home_shows_home_page/view.html
+++ b/spec/fixtures/views/Home_home_shows_home_page/view.html
@@ -76,7 +76,7 @@ Februar 2024
 </h4>
 </div>
 <div class='list-group list-group-flush'>
-<a class="list-group-item list-group-item-action" href="/2024/mv-cup"><div class='d-flex flex-row'>
+<a class="list-group-item list-group-item-action current-competition" href="/2024/mv-cup"><div class='d-flex flex-row'>
 <div class='discipline-icons'></div>
 <div class='ms-3'>
 <h6 class='mb-0'>MV-Cup</h6>
